# docs/swagger.json
@@ -155,6 +155,18 @@
                             "$ref": "#/definitions/domain.PollClientListResponse"
                         }
                     },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -500,6 +512,12 @@
                             "$ref": "#/definitions/domain.ErrorResponse"
                         }
                     },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -542,6 +560,12 @@
                     },
                     "401": {
                         "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/domain.ErrorResponse"
                         }
@@ -594,6 +618,12 @@
                     },
                     "401": {
                         "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/domain.ErrorResponse"
                         }
@@ -1131,6 +1161,12 @@
                 "poll_type": {
                     "$ref": "#/definitions/domain.PollType"
                 },
+                "responses": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "title": {
                     "type": "string"
                 },
@@ -1153,6 +1189,9 @@
                 },
                 "pagination": {
                     "$ref": "#/definitions/domain.PaginationResult"
+                },
+                "sheet": {
+                    "$ref": "#/definitions/domain.PollClientSheetMeta"
                 }
             }
         },
@@ -1161,6 +1200,12 @@
             "properties": {
                 "id": {
                     "type": "string"
+                },
+                "inputs": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 },
                 "votes": {
                     "type": "array",
@@ -1187,6 +1232,20 @@
                 },
                 "poll_type": {
                     "$ref": "#/definitions/domain.PollType"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.PollClientSheetMeta": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "is_phone_required": {
+                    "type": "boolean"
                 },
                 "title": {
                     "type": "string"
@@ -1326,13 +1385,36 @@
                 }
             }
         },
+        "domain.SheetListItem": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "status": {
+                    "$ref": "#/definitions/domain.SheetStatus"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "user_name": {
+                    "type": "string"
+                },
+                "venue": {
+                    "type": "string"
+                }
+            }
+        },
         "domain.SheetListResponse": {
             "type": "object",
             "properties": {
                 "data": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/domain.Sheet"
+                        "$ref": "#/definitions/domain.SheetListItem"
                     }
                 },
                 "pagination": {
